--- a/Job Application/index.html
+++ b/Job Application/index.html
@@ -33,6 +33,7 @@
               <label for="address">Address</label>
               <textarea
                 name="addeess"
+                id="address"
                 cols="50"
                 rows="4"
                 placeholder="Enter addeess.."
